# acw-symbolic-psychology

./: .gitignore  CITATION.cff  LICENSE  README.md  SCAFFOLD.md  package.json  pyproject.toml
.github/workflows/: ci.yml
analyses/comparative/: necessary_action.md  portability_to_other_conflicts.md  symbolic_worlds.md  violence_logics.md
analyses/group/: README.md
analyses/individual/: README.md
analyses/validation/: README.md
config/: actors.yaml  groups.yaml  phases.yaml  registers.yaml  shared_taxonomy.yaml  source_repositories.yaml
docs/: findings.md  how_to_read.md  index.md  limitations.md  methods.md  publication_plan.md  thesis.md
groups/abolitionist_prophetic/: comparison_plan.md  group_profile.md
groups/confederate_military/: comparison_plan.md  group_profile.md
groups/confederate_political/: comparison_plan.md  (+1 more)
methods/: absence_analysis.md  adaptation_guide.md  annotation_codebook.md  cmt_protocol.md  koenigsberg_protocol.md  metaphor_identification_protocol.md  reliability_validation.md  theoretical_framework.md
schemas/: annotation.schema.json  corpus_manifest.schema.json  document_summary.schema.json  group_comparison.schema.json  person_profile.schema.json  segmented_document.schema.json
scripts/: _pipeline_common.py  acquire_sources.py  build_document_summaries.py  build_group_comparisons.py  build_person_profiles.py  export_tables.py  extract_candidates.py  normalize_text.py  reliability_report.py  run_pipeline.py  segment_documents.py  validate_annotations.py  validate_manifest.py  validate_segments.py
tests/: test_smoke.py
(+85 files in other folders)
