[project]
name = "acw-symbolic-psychology"
version = "0.1.0"
description = "Research scaffolding for studying American Civil War symbolic psychology through metaphor analysis and reproducible corpus methods."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Andrew Hammer" }
]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

